--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ricazhang.tumblrtips" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/heart_big"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.ReblogRecommendations"
-            android:label="@string/app_name" >
+            android:name=".ReblogRecommendationsActivity"
+            android:label="@string/title_activity_reblog_recommendations" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
